name: todo-sqlite-easy
version: 0.1.0.0
license-file: LICENSE
author: Gil Mizrahi
maintainer: gilmi@posteo.net
copyright: 2022 Gil Mizrahi
build-type: Simple
cabal-version: >=1.10
extra-source-files: README.md

executable todo-sqlite-easy
  hs-source-dirs: src
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -Wall -O -threaded -rtsopts -with-rtsopts=-N
  -- ghc-options: -Wall -static -optl-static -optl-pthread -fPIC -O -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , sqlite-easy
    , text
